--- a/layout1.html
+++ b/layout1.html
@@ -8,11 +8,12 @@
     <style>
       .left > div {
         border: 1px solid grey;
-        background-color: rgb(43, 41, 41);
+        background-color: rgb(63, 60, 60);
         height: 50px;
         text-align: center;
         line-height: 50px;
         margin-top: 5px;
+        color: white;
       }
       .left {
         display: block;
@@ -37,6 +38,7 @@
         display: block;
         text-align: center;
         background-color: rgb(63, 60, 60);
+        color: white;
       }
 
       @media only screen and (max-width: 820px) {
