--- a/Myntra2.html
+++ b/Myntra2.html
@@ -79,6 +79,7 @@
                     <li class="nav-item">
                       <a class="nav-link text-dark" href="#">Studio</a>
                     </li>
+                    <span class="badge bg-none text-danger">NEW</span>
                   </ul>
                 </div>
                 <div class="d-inline-flex position-relative nshow">
@@ -107,7 +108,7 @@
                       src="https://www.svgrepo.com/show/457227/profile.svg"
                       alt=""
                     />
-                    <p class="small">Profile</p>
+                    <p class="small text-center">Profile</p>
                   </div>
                   <div class="mx-3 mt-2">
                     <img
@@ -116,7 +117,7 @@
                       src="https://www.svgrepo.com/show/504459/heart.svg"
                       alt=""
                     />
-                    <p class="small">Wishlist</p>
+                    <p class="small text-center">Wishlist</p>
                   </div>
                   <div class="mx-3 mt-2">
                     <img
@@ -600,6 +601,11 @@
             </div>
         </div>
     </div>
+    <div class="row nhide mt-2">
+        <div class="col-sm-12">
+            <button type="button" class="btn btn-dark w-100">Get More Products</button>
+        </div>
+    </div>
 
     <div class="row text-center nshow">
         <div class="col-sm-12 text-md-start my-md-5">
@@ -698,6 +704,113 @@
                 <span class="text-center">Men</span>       
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-sm-12 d-inline-flex bg-light flex-row mt-5 ml-5 nshow">
+            <div class="col-md-2 mt-3">
+
+            </div>
+            <div class="col-md-2 mt-3">
+                <h6 class="text-uppercase text-sm-start fw-bold mb-4">
+                    Online Shopping
+                  </h6>
+                  <p>
+                    <a href="#!" class="text-reset">Men</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Women</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Kids</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Home &amp; Living</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Beauty</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Gift Cards</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Myntra inside</a>
+                  </p>
+            </div>
+            <div class="col-md-2 mt-3">
+                <h6 class="text-uppercase fw-bold mb-4">
+                    USEFUL LINKS
+                  </h6>
+                  <p>
+                    <a href="#!" class="text-reset">Blog</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Careers</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Corporate Information</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Whitehat</a>
+                  </p>
+            </div>
+            <div class="col-md-2 mt-3">
+                <h6 class="text-uppercase fw-bold mb-4">
+                    Customer Policies
+                  </h6>
+                  <p>
+                    <a href="#!" class="text-reset">Contanct Us</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">FAQ</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">T&amp;C</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Terms Of Use</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Track Orders</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">shipping</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Cancellation</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Returns</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Privacy Policies</a>
+                  </p>
+                  <p>
+                    <a href="#!" class="text-reset">Grievance Officer</a>
+                  </p>
+            </div>
+            <div class="col-md-2 mt-3">
+                <h6 class="text-uppercase fw-bold mb-4">Contact us</h6>
+                <p>New York, NY 10012, US</p>
+                <p>info@example.com</p>
+                <p>+ 01 234 567 88</p>
+                <p>+ 01 234 567 89</p>
+            </div>
+            <div class="col-md-2 mt-3">
+                <h6 class="text-uppercase fw-bold mb-4">Keep In Touch</h6>
+                <a href="#" class="link-secondary ps-1"><i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="link-secondary ps-3"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="link-secondary ps-3"><i class="fa fa-youtube-play fa-lg" aria-hidden="true"></i>
+                </a>
+                <a href="#" class="link-secondary ps-3"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+</div>
     </div>
 
 
